Add Flarum bootstrap

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "flarum/core": "^0.1.0-beta.7"
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "0.1.0-beta.7"
+        },
         "flarum-extension": {
             "title": "Thai language pack",
             "icon": {
